<?xml version="1.0"?>
<package format="3">
  <name>elevation_mapping</name>
  <version>0.7.25</version>
  <description>Generates an elevation map from distance measurements and robot pose information.</description>
  <maintainer email="mwulf@anybotics.com">Maximilian Wulf</maintainer>
  <maintainer email="mgaertner@anybotics.com">Magnus Gaertner</maintainer>
  <license>BSD</license>
  <url type="website">http://github.com/anybotics/elevation_mapping</url>
  <url type="bugtracker">http://github.com/anybotics/elevation_mapping/issues</url>
  <author email="pfankhauser@anybotics.com">Péter Fankhauser</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_filters</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_msgs</depend>
  <depend>grid_map_core</depend>
  <depend>filters</depend>
  <depend>eigen3_cmake_module</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
