<?xml version="1.0"?>
<package format="3">
  <name>elevation_mapping_demos</name>
  <version>0.7.23</version>
  <description>Demonstrations for the elevation mapping framework.</description>
  <maintainer email="mwulf@anybotics.com">Maximilian Wulf</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>elevation_mapping</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
